--- a/CppServer/CppServer/CppServer.vcxproj
+++ b/CppServer/CppServer/CppServer.vcxproj
@@ -129,9 +129,13 @@
   <ItemGroup>
     <ClCompile Include="Listener.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="Room.cpp" />
+    <ClCompile Include="Session.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Listener.h" />
+    <ClInclude Include="Room.h" />
+    <ClInclude Include="Session.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
